--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 .header {
+    text-align: center;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     padding: 10px 16px;
     background: #555;
     color: #f1f1f1;
