--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+
+body {
+    background: url(https://images.unsplash.com/photo-1524260855046-f743b3cdad07?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=801&q=80);
+    background-size: 100%;
+}
+
 .header {
     text-align: center;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
@@ -6,11 +12,10 @@
     color: #f1f1f1;
 }
 .container {
-    border-color: goldenrod;
-    border: 10px;
-    background-color: lightsalmon;
+    background-color: #111C11;
+    opacity: 0.5;
     width: 950px;
-    height: 500px;
+    height: 100%;
 
 }
 
