--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
 }
 
 .header {
+    border-radius: 20px;
     text-align: center;
     font-family:'Cairo', sans-serif;
     padding: 10px 16px;
@@ -12,10 +13,11 @@ body {
     color: #f1f1f1;
 }
 .container {
+    border-radius: 20px;
     background-color: #111C11;
     opacity: 0.5;
     width: 950px;
-    height: 100%;
+    height: 400px;
 
 }
 
@@ -32,4 +34,5 @@ body {
     color: white;
     border: 3px; 
 }
+
 
